# browserFairy

./: .env.example  .gitignore  CLAUDE.md  COMPETITIVE_ANALYSIS.md  DATA_ANALYSIS_GUIDE.md  MARKETING_STRATEGY.md  README.md  README_OLD.md  analyze_collected_data.py  check_session.py  check_source_maps_directly.py  check_specific_source_map.py  debug_gc_metrics.py  debug_monitoring.py  debug_network.py  debug_source_map.py  demo_websocket_monitoring.py  diagnose_crash.py  diagnose_source_maps.py  fix_network_monitoring.py  install.sh  main.py  pyproject.toml  test_exception.html  test_network_events.py  test_persist_all_e2e.py  test_simple.py  test_source_map_debug.py
browserfairy/: __init__.py  __main__.py  cli.py  config.py  service.py
docs/: AI_ANALYSIS_GUIDE.md
tasks/: 1-1-1.design.md  1-1-2.design.md  1-1.design.md  1-2.design.md  1-3.design.md  1-4.design.md  1-5.design.md  1-6.design.md  1-7.design.md  1-8.design.md  1.design.md  1.task.md  2-1.design.md  2-1.task.md  2-2.design.md  2-2.task.md  2-3-10.design.md  2-3-11.design.md  2-3-12.design.md  2-3-6.design.md  2-3-6.task.md  2-3-7.design.md  2-3-7.task.md  2-3-8.design.md  2-3-9.design.md  2-3.design.md  2-3.design.md.old  2-3.task.md  2-4.design.md  2-5.design.md  2-5.task.md  2-6-1.design.md  2-6.design.md  2-7.design.md  2.task.md  3-1.design.md  3-2.design.md  README-fix.design.md
tests/: __init__.py  test_ai_analyzer.py  test_chrome_instance.py  test_connector.py  test_console_source_map.py  test_data_manager.py  test_data_writer.py  test_event_id_improvements.py  test_event_listener_analysis.py  (+17 more)
(+30 files in other folders)
